Refactor addMembers test to use Arrays.asList for null UUID handling